src/css/style.css
/* CSS crunched with Crunch - http://crunchapp.net/ */
/* General Styling */
body {
  color: #000;
}
a {
  color: #0060b3;
}
body,
.room_title,
.username,
.messageContent,
#chatInput,
#chatbox,
* {
  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, sans-serif;
  font-size: 16px;
  font-weight: 300;
  box-sizing: border-box;
}
#container {
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  background-color: #faf7f7;
  overflow: hidden;
}
header,
footer {
  width: 100%;
  height: 50px;
  background-color: #bf2935;
  color: #fff;
  position: absolute;
}
.header_btn {
  width: 41px;
  height: 36px;
  text-align: center;
  line-height: 40px;
  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2);
  background-image: linear-gradient(bottom, #bf2936 100%, #b22531 0%);
  border: 1px solid #99202a;
  box-sizing: content-box;
  font-size: 18px;
  cursor: pointer;
}
.header_btn:hover {
  background-image: linear-gradient(bottom, #cc2b3b 0%, #e63344 100%);
}
.header_btn:active {
  background-image: linear-gradient(bottom, #b22531 100%, #bf2936 0%);
}
#lobby_btn,
#room_btn {
  top: 4px;
}
#lobby_btn {
  position: absolute;
  left: 10px;
}
#room_btn {
  position: absolute;
  right: 10px;
}
#logo {
  width: 35px;
  height: 35px;
  background-size: 35px 35px;
  background-image: url('../images/logo.png');
  margin: 6px auto 0 auto;
}
.dropdown-menu {
  left: auto !important;
  right: 0;
}
header {
  top: 0;
  border-top: 1px solid #c94953;
  border-bottom: 1px solid #4c1015;
}
footer {
  bottom: 0;
  border-top: 1px solid #4c1015;
  border-bottom: 1px solid #c94953;
}
/* Lobby Styling */
/* Room Styling */
#room_header {
  height: 45px;
  width: 100%;
  position: absolute;
  top: 50px;
  color: #fff;
  background-color: #241818;
  overflow: hidden;
}
.room_title {
  font-weight: 500;
  font-size: 24px;
  position: absolute;
  bottom: 0;
  left: 15px;
  white-space:nowrap;
  margin-bottom: .3em;
}
.participants {
  font-size: 16px;
  font-style: italic;
  margin-left: 15px;
}
.ws_active_indicator {
  background-color: #008B00;
  width: 10px;
  height: 10px;
  display: inline-block;
  border-radius: 10px;
  vertical-align: middle;
  margin-left: 7px;
  box-shadow: 0px 0px 1px rgba(0, 139, 0, 0.6);
}

ul.messageList {
  margin-bottom: 0;
}

#messages {
  width: 80%;
  position: absolute;
  top:95px;
  bottom: 50px;
  left: 0;
  overflow-x: hidden;
  overflow-y: auto;
}
#messages .message {
  width: auto;
  margin: 0 auto 2px auto;
  min-height: 50px;
  background-color: #eeeeee;
  position: relative;
  padding: 2px;
  padding-left: 5px;
}
#messages .mentioned {
  background-color: #b9ffb9;
}
#messages .broadcasted {
  background-color: #fffcbe;
}
#messages .message:first-child {
  margin-top: 20px;
}
#messages .message .userTag,
#messages .message .messageContent {
  display: inline-block;
}
#messages .message .userTag {
  width: 15%;
  max-width: 11em;
  line-height: 38px;
  vertical-align: top;
}
#messages .message .userTag .userPic {
  width: 40px;
  height: 40px;
  background-size: 40px 40px;
  display: block;
  border-radius: 2px;
  float: left;
  margin-right: 10px;
}
#messages .message .messageContent {
  padding: 10px 0 10px 0;
  line-height: 24px;
}
#messages .message .username .author {
  color: #000000;
}
#messages .message .mention {
  font-weight: bold;
}
.postMetaTop {
  float: right;
}
.postTimestamp {
  font-family: 'Open Sans', sans-serif;
}
.postMeta {
  text-align: right;
  margin: 0;
  display: none;
}
.postMeta .btn {
  padding: 4px 8px;
}
.stickyColor {
  color: #bf2935 !important;
}
.stickyMessageList {
  margin-top: 1.4em;
}
.stickyMessageList .stickyColor {
  display: none;
}
.stickyMessageList .message {
  background-color: #ffe6e8 !important;
}
#stickyLink {
  color: #000;
  margin-left: 1em;
  margin-top: 1em;
  margin-bottom: 0;
  cursor: pointer;
}
#users {
  width: 20%;
  position: absolute;
  top: 95px;
  bottom: 50px;
  right: 0;
  background-color: #c7c5c5;
  border-left: 1px solid rgba(0, 0, 0, 0.25);
  overflow: auto;
}
#users .user {
  width: 90%;
  height: 45px;
  margin: 0 auto 5px auto;
  background-color: #404040;
  color: #fff;
  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2);
  overflow: hidden;
  white-space: nowrap;
}
#users .user:first-child {
  margin-top: 10px;
}
#users .userTag {
  white-space: nowrap;
}
#users .me {
  background-color: #4d3637;
}
#users .inactive {
  background-color: #a6a6a6;
  color: #d9d9d9;
}
#users .inactive .userPic {
  opacity: 0.5;
}
#users .inactive.me {
  background-color: #968c8c;
}
#users .userPic {
  width: 32px;
  height: 32px;
  background-size: 35px 35px;
  background-position: center center;
  border-radius: 2px;
  border: 1px solid #363333;
  display: inline-block;
  margin: 7px 0 0 5px;
  overflow: hidden;
  box-sizing: content-box;
  font-weight: 300;
}
#users .username {
  display: inline-block;
  position: relative;
  bottom: 12px;
  left: 6px;
  font-weight: 500;
}
#chatInput input,
#chatInput a,
#chatInput textarea {
  float: left;
  display: block;
}
#chatInput a {
  max-width:60px;
  width: 12%;
  margin: 5px 0;
  height: 38px;
  text-align: center;
  font-size: 24px;
  line-height: 43px;
  background-image: linear-gradient(bottom, #bf2936 100%, #b22531 0%);
  border: 1px solid #99202a;
  box-sizing: content-box;
  font-size: 18px;
  cursor: pointer;
}
#chatInput a:hover {
  background-image: linear-gradient(bottom, #cc2b3b 0%, #e63344 100%);
}
#chatInput a:active {
  background-image: linear-gradient(bottom, #b22531 100%, #bf2936 0%);
}
#chatInput #chatBox {
  border: 1px solid #000;
  width: 70%;
  height: 40px;
  resize: none;
  margin: 5px 0 0 5px;
  padding: 0 0 0 10px;
  font-weight: 400;
}
#chatInput #textBox {
  border: 1px solid #000;
  width: 74%;
  height: 90px;
  resize: none;
  margin: 5px 0 0 5px;
  padding: 0 0 0 10px;
  font-weight: 400;
}

.white-icon {
  color: #ffffff;
}

ul {
  list-style-type: none;
  padding-left: 0;
}

@media (max-width: 580px) {
  /* room */
  #messages {
    width: 100%;
  }
  #users {
    display: none;
  }
  .message .userPic {
    display: none !important;
  }
  .message .userTag {
    width: 40% !important;
  }
  .username .author {
    font-weight: bold;
  }
  /* index */
  .avatarImg {
    display:none;
  }
}

@media (prefers-color-scheme: dark) {
  /* dark mode */
  #container {
    background-color: #0d0c0c;
  }
  #messages .message {
    background-color: #0f0f0f;
    color: #ddd;
  }
  #messages .mentioned {
    background-color: #b9ffb9;
  }
  #messages .broadcasted {
    background-color: #fffcbe;
  }
  #messages .broadcasted,#messages .mentioned,#messages .mentioned .username .author,#messages .mentioned .username .author {
    color: #000;
  }
  #users {
    background-color: #130c0c;
  }
  #messages .message .username .author {
    color: #fff;
  }
  #users .inactive {
    background-color: #0b0707;
    color: #333;
  }
  .stickyMessageList .message {
    background-color: #20090b !important;
  }
  #stickyLink {
    color: #fff;
  }
}

